<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    tools:context="com.example.pc.reto8.MainActivity"
    android:padding="25dp">

    <TextView android:text="@string/choose_menu" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/header_margin"
        android:paddingRight="@dimen/header_margin"
        android:paddingLeft="@dimen/header_margin"
        android:paddingBottom="@dimen/header_bottom_margin"
        android:textSize="@dimen/text_size"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:gravity="clip_horizontal" />
    <Button
        android:id="@+id/button_add_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_company"
        />

    <Button
        android:id="@+id/button_delete_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_company"
        />

    <Button
        android:id="@+id/button_view_companys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_all_companys"
        />
</LinearLayout>